Update pictures description

--- a/index.html
+++ b/index.html
@@ -36,15 +36,15 @@
       </div>
       <div class="col-xs-12 col-sm-6 col-md-6">
         <div class="card">
-          <img src="images/nature.jpg" class="card-img-top"  alt="picture description">
+          <img src="images/nature.jpg" class="card-img-top"  alt="Picture of a forest">
           <div class="card-description">
-            <h2 class="card-title">I want to explore the nature</h2>
+            <h2 class="card-title">Let's explore nature</h2>
           </div>
         </div>
       </div>
       <div class="col-xs-12 col-sm-6 col-md-6">
         <div class="card">
-          <img src="images/meditation.jpg" class="card-img-top"  alt="picture description">
+          <img src="images/meditation.jpg" class="card-img-top"  alt="Man meditating">
           <div class="card-description">
             <h2 class="card-title">I need a meditation retreat</h2>
           </div>
@@ -52,7 +52,7 @@
       </div>
       <div class="col-xs-12 col-sm-6 col-md-6">
         <div class="card">
-          <img src="images/roadtrip.jpg" class="card-img-top"  alt="picture description">
+          <img src="images/roadtrip.jpg" class="card-img-top"  alt="Van on the road">
           <div class="card-description">
             <h2 class="card-title">Let's hit the road</h2>
           </div>
@@ -60,7 +60,7 @@
       </div>
       <div class="col-xs-12 col-sm-6 col-md-6">
         <div class="card">
-          <img src="images/spa.jpg" class="card-img-top"  alt="picture description">
+          <img src="images/spa.jpg" class="card-img-top"  alt="Woman in a spa bath">
           <div class="card-description">
             <h2 class="card-title">Spoil me</h2>
           </div>
