--- a/index.html
+++ b/index.html
@@ -9,9 +9,11 @@
 </head>
 <body>
   <div id="banner">
-    <img src=""images/travel-plan.jpg"" alt="">
-    <h1>Pack your bags</h1>
-    <h2>We'll take care of the rest</h2>
+    <div class="col-xs-12 col-sm-12 col-md-12">
+      <img src=""images/travel-plan.jpg"" alt="">
+      <h1>Pack your bags</h1>
+      <h2>We'll take care of the rest</h2>
+    </div>
   </div>
   <div class="container">
     <h1>What kind of trip are you looking for?</h1>
@@ -38,7 +40,7 @@
         <div class="card">
           <img src="images/nature.jpg" class="card-img-top"  alt="Picture of a forest">
           <div class="card-description">
-            <h2 class="card-title">Let's explore nature</h2>
+            <h2 class="card-title">Explore nature</h2>
           </div>
         </div>
       </div>
@@ -46,7 +48,7 @@
         <div class="card">
           <img src="images/meditation.jpg" class="card-img-top"  alt="Man meditating">
           <div class="card-description">
-            <h2 class="card-title">I need a meditation retreat</h2>
+            <h2 class="card-title">Meditation retreat</h2>
           </div>
         </div>
       </div>
