--- a/index.html
+++ b/index.html
@@ -26,8 +26,8 @@
           <div class="card-description">
             <h2 class="card-title">Take me to the city</h2>
           </div>
-          </div>
         </div>
+      </div>
       <div class="col-xs-12 col-sm-6 col-md-6">
         <div class="card">
           <img src="images/hiking.jpg" class="card-img-top" alt="Group of hikers">
@@ -71,12 +71,10 @@
     </div>
   </div>
   <div id="footer">
-    <ul>
-      <a href="#"><i class="fab fa-youtube"></i></a>
-      <a href="#"><i class="fab fa-facebook"></i></a>
-      <a href="#"><i class="fab fa-twitter"></i></a>
-      <a href="#"><i class="fab fa-github"></i></a>
-    </ul>
+    <a href="#"><i class="fas fa-envelope"></i></a>
+    <a href="#"><i class="fas fa-map-marker-alt"></i></a>
+    <a href="#"><i class="fab fa-twitter"></i></a>
+    <a href="#"><i class="fab fa-youtube"></i></a>
   </div>
 </body>
 </html>
