Add style to body

--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
   <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.5.0/css/all.css">
   <title>Just pack</title>
 </head>
-<body>
+<body id="body">
   <div id="banner">
     <div class="col-xs-12 col-sm-12 col-md-12">
       <img src=""images/travel-plan.jpg"" alt="">
